themes/news/less/_panel-fs-photo-card.less
@import "_less.less";

@gutter: 1.5rem;
@_content-breakpoint: 820px;

.slide {
  backface-visibility: hidden;
  background-color: #ffffff;
  height: auto;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: relative;
  width: 100%;
  opacity: .999999;

  @media screen and (min-width: 640px) {
    min-height: 100vh;
  }
  .slide-content {
    padding: 1.5em;

    @media screen and (min-width: 640px) {
      backface-visibility: inherit;
      background-color: rgba( 255, 255, 255, .85 );
      border-top-left-radius: 8px;
      border-top-right-radius: 8px;
      display: block;
      margin: ~"calc(100vh - 75px)" (@gutter * 2) -1px;
      position: relative;
    }

    h2 {
      @media screen and (min-width: 640px) {
        margin: 0;
        font-size: 28px;
        line-height: 44px;
      }
    }

    @media screen and (min-width: @_content-breakpoint) {
      max-width: 600px;
      width: 100%;
    }

    &.fixed {
      @media screen and (min-width: 640px) {
        margin-top: 0;
        position: fixed;
        top: ~"calc(100vh - 75px)";
      }
    }

    &.relative {
      margin-top: @gutter;
      position: relative;
      top: 0;
    }

    &.slide-left {
      @media screen and (min-width: @_content-breakpoint) {
        left: 0;
        float: left;
        margin-left: @gutter * 2.8; // visually centers at 820px
      }
    }

    &.slide-right {
      @media screen and (min-width: @_content-breakpoint) {
        float: right;
        margin-right: @gutter * 3.66666667; // visually centers at 820px
        right: 0;
      }

    }

    &.slide-center {
      @media screen and (min-width: @_content-breakpoint) {
        left: 42.5%;
        transform: translateX(-50%);
      }
    }

    &[data-readmore] {
      transition: height .25s ease-in-out;
    }

    &[aria-expanded="true"] {
      height: auto;
      max-height: none;

      @media screen and (min-width: 640px) {
        height: auto !important;
        max-height: none !important;
        overflow: visible;
      }
    }

    &[aria-expanded="false"] {
      @media screen and (max-width: 639px) {
        max-height: 200px;
        overflow: hidden;
      }

      @media screen and (min-width: 640px) {
        height: auto !important;
        max-height: none !important;
        overflow: visible;
      }
    }
  }

  a[data-readmore-toggle] {
    @media screen and (max-width: 639px) {
      background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 35% );
      width: 100%;
      position: absolute;
      bottom: 0;
      height: 3em;
      padding-top: 1em;
      text-align: center;
    }

    @media screen and (min-width: 640px) {
      display: none;
    }
  }

  .social-share {
    backface-visibility: inherit;
    display: block;
    text-align: center;

    .social-share-label {
      display: none;

      @media screen and (max-width: (@_content-breakpoint - 1px)) {
        display: block;
        text-transform: uppercase;
        font-size: @font-size-small;
        color: @su-red-text;
        margin-bottom: -.5em;
      }
    }

    @media screen and (min-width: @_content-breakpoint) {
      background-color: inherit;
      border-bottom-right-radius: 8px;
      border-top-right-radius: 8px;
      height: 8.5em;
      opacity: 1;
      padding-left: 0;
      padding-top: 1em;
      position: absolute;
      right: -3em;
      top: calc(50% - 5em);
      width: 3em;
    }


    ul {
      font-size: 36px;
      padding: 0;
      display: inline-block;
      margin: .25em auto 0;
      @media screen and (min-width: @_content-breakpoint) {
        font-size: 24px;
        margin: 0 0 0 .5em;
      }
    }

    li {
      margin-right: .5em;
      margin-bottom: 0;
      @media screen and (min-width: @_content-breakpoint) {
        display: block;
        padding: 0;
      }

      a {
        margin-bottom: 0;
      }
    }
  }

  .slide-image {
    position: relative;
    width: 100vw;
    height: 100vw;
    background-size: cover;
    background-position: center;
    backface-visibility: inherit;

    @media screen and (min-width: 640px) {
      position: absolute;
      top:0;
      left: 0;
      right: 0;
      bottom: 0;
      width: 100vw;
      height: 100vh;
      overflow: hidden;

    }

    &.fixed-bg {
      @media screen and (min-width: 640px) {
        position: fixed;
      }
    }
  }

  .hidden-xs {
    display: none !important;
    @media screen and (min-width: 640px) {
      display: inherit !important;
    }
  }
  .visible-xs {
    display: inherit !important;
    @media screen and (min-width: 640px) {
      display: none !important;
    }
    &.slide-image-attrib {
      padding-left: 1.5em;
    }
  }

}

